--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
+    "test:verbose": "jest --passWithNoTests --runInBand",
+    "test:staged": "npm test --findRelatedTests",
     "prepare": "husky install"
   },
   "keywords": [],
@@ -26,6 +28,7 @@
     "jest": "^29.6.4",
     "lint-staged": "^14.0.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
