--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,6 @@
     "module": "commonjs",
     "target": "ES2019",
     "esModuleInterop": true,
-    "allowJs": true
+    "allowJs": true,
+    "strictNullChecks": true
 }}
