--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "git-commit-msg-linter": "^5.0.4"
-  },
   "devDependencies": {
     "@types/jest": "^29.5.4",
     "@types/node": "^20.5.4",
@@ -24,11 +21,12 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
     "jest": "^29.6.4",
     "lint-staged": "^14.0.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.1.6"
   }
 }
